feat: polygon parts output filter and enchancement by roi feature collection
