# openapi3.yaml
@@ -268,6 +268,37 @@ components:
     Description:
       type: string
       nullable: true
+    FeatureFindPayload:
+      required:
+        - type
+        - properties
+        - geometry
+      properties:
+        type:
+          type: string
+          enum:
+            - Feature
+        id:
+          $ref: '#/components/schemas/FeatureId'
+        properties:
+          type: object
+          nullable: true
+          properties:
+            maxResolutionDeg:
+              $ref: '#/components/schemas/ResolutionDegree'
+            minResolutionDeg:
+              $ref: '#/components/schemas/ResolutionDegree'
+        geometry:
+          type: object
+          nullable: true
+          allOf:
+            - oneOf:
+                - $ref: ./SchemaRaster/core/geojson.yaml#/components/schemas/Polygon
+                - $ref: >-
+                    ./SchemaRaster/core/geojson.yaml#/components/schemas/MultiPolygon
+                - $ref: '#/components/schemas/NullTypeRef'
+        bbox:
+          $ref: ./SchemaRaster/core/geojson.yaml#/components/schemas/BBox
     FeatureFindResponse:
       required:
         - type
@@ -279,13 +310,32 @@ components:
           enum:
             - Feature
         id:
-          oneOf:
-            - type: number
-            - type: string
+          $ref: '#/components/schemas/FeatureId'
         properties:
           $ref: '#/components/schemas/PolygonPartsFindResponseFeatureProperties'
         geometry:
           $ref: ./SchemaRaster/core/geojson.yaml#/components/schemas/Polygon
+        bbox:
+          $ref: ./SchemaRaster/core/geojson.yaml#/components/schemas/BBox
+    FeatureId:
+      oneOf:
+        - type: number
+        - type: string
+    FeatureCollectionFindPayload:
+      type: object
+      description: GeoJSON Feature collection
+      required:
+        - type
+        - features
+      properties:
+        type:
+          type: string
+          enum:
+            - FeatureCollection
+        features:
+          type: array
+          items:
+            $ref: '#/components/schemas/FeatureFindPayload'
         bbox:
           $ref: ./SchemaRaster/core/geojson.yaml#/components/schemas/BBox
     FeatureCollectionFindResponse:
@@ -303,51 +353,6 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/FeatureFindResponse'
-        bbox:
-          $ref: ./SchemaRaster/core/geojson.yaml#/components/schemas/BBox
-    FeatureFindPayload:
-      required:
-        - type
-        - properties
-        - geometry
-      properties:
-        type:
-          type: string
-          enum:
-            - Feature
-        id:
-          oneOf:
-            - type: number
-            - type: string
-        properties:
-          type: object
-          nullable: true
-        geometry:
-          type: object
-          nullable: true
-          allOf:
-            - oneOf:
-                - $ref: ./SchemaRaster/core/geojson.yaml#/components/schemas/Polygon
-                - $ref: >-
-                    ./SchemaRaster/core/geojson.yaml#/components/schemas/MultiPolygon
-                - $ref: '#/components/schemas/NullTypeRef'
-        bbox:
-          $ref: ./SchemaRaster/core/geojson.yaml#/components/schemas/BBox
-    FeatureCollectionFindPayload:
-      type: object
-      description: GeoJSON Feature collection
-      required:
-        - type
-        - features
-      properties:
-        type:
-          type: string
-          enum:
-            - FeatureCollection
-        features:
-          type: array
-          items:
-            $ref: '#/components/schemas/FeatureFindPayload'
         bbox:
           $ref: ./SchemaRaster/core/geojson.yaml#/components/schemas/BBox
     Id:
@@ -441,6 +446,12 @@ components:
             ./Schema/ingestionTrigger/metadata/rasterLayerMetadata.yaml#/components/schemas/productType
         productVersion:
           $ref: '#/components/schemas/ProductVersion'
+        requestFeatureId:
+          oneOf:
+            - $ref: '#/components/schemas/FeatureId'
+            - type: array
+              items:
+                $ref: '#/components/schemas/FeatureId'
         resolutionDegree:
           $ref: '#/components/schemas/ResolutionDegree'
         resolutionMeter:
